tests/golden/infer/error/forall_mono_let_reuse.ziku
let id = \x => x in id 42 + if id true then 1 else 2
